// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryResults expands and nests matrix columns 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root makeStyles-resultsPane MuiGrid-container"
  >
    <div
      class="MuiGrid-root makeStyles-result MuiGrid-item"
    >
      <div>
        <div
          class="cm-editor ͼ1 ͼ2 "
        >
          <div
            aria-live="polite"
            style="position: absolute; top: -10000px;"
          />
          <div
            class="cm-scroller"
            tabindex="-1"
          >
            <div
              aria-multiline="true"
              autocapitalize="off"
              autocorrect="off"
              class="cm-content cm-lineWrapping"
              contenteditable="false"
              role="textbox"
              spellcheck="false"
              style="tab-size: 4;"
              translate="no"
            >
              <div
                class="cm-line"
              >
                query: 
              </div>
              <div
                class="cm-line"
              >
                user_columns: [
                <span
                  class="ͼd"
                >
                  "monster.name"
                </span>
                ,
                <span
                  class="ͼd"
                >
                  "monster.name"
                </span>
                ,
                <span
                  class="ͼd"
                >
                  "prize.name"
                </span>
                ,
                <span
                  class="ͼd"
                >
                  "labor.contributions"
                </span>
                ]
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root makeStyles-config MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end"
      >
        <div
          class="MuiTypography-root makeStyles-container MuiTypography-body1"
        >
          <label
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              Nest matrices
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <span
                class="MuiSwitch-root WithStyles(ForwardRef(Switch))-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiSwitch-switchBase WithStyles(ForwardRef(Switch))-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-checked MuiSwitch-checked WithStyles(ForwardRef(Switch))-checked"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input MuiSwitch-input"
                      name="expand-matrices-query"
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="MuiSwitch-thumb WithStyles(ForwardRef(Switch))-thumb"
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiSwitch-track WithStyles(ForwardRef(Switch))-track"
                />
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              Expand matrices
            </div>
          </label>
        </div>
        <div
          class="MuiTypography-root makeStyles-container MuiTypography-body1"
        >
          <label
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              Nested
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <span
                class="MuiSwitch-root WithStyles(ForwardRef(Switch))-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiSwitch-switchBase WithStyles(ForwardRef(Switch))-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-checked MuiSwitch-checked WithStyles(ForwardRef(Switch))-checked"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input MuiSwitch-input"
                      name="flatten-query"
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="MuiSwitch-thumb WithStyles(ForwardRef(Switch))-thumb"
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiSwitch-track WithStyles(ForwardRef(Switch))-track"
                />
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              Flattened
            </div>
          </label>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-flex-end MuiGrid-justify-xs-flex-end"
      >
        <div
          class="MuiTablePagination-root"
        >
          <div
            class="MuiToolbar-root MuiToolbar-regular MuiTablePagination-toolbar MuiToolbar-gutters"
          >
            <div
              class="MuiTablePagination-spacer"
            />
            <p
              class="MuiTypography-root MuiTablePagination-caption MuiTypography-body2 MuiTypography-colorInherit"
              id="mui-50000"
            >
              Rows per page:
            </p>
            <div
              class="MuiInputBase-root MuiTablePagination-input MuiTablePagination-selectRoot"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="mui-50000 mui-50000"
                class="MuiSelect-root MuiSelect-select MuiTablePagination-select MuiSelect-selectMenu MuiInputBase-input"
                id="mui-50000"
                role="button"
                tabindex="0"
              >
                10
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                tabindex="-1"
                value="10"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiTablePagination-selectIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
            <p
              class="MuiTypography-root MuiTablePagination-caption MuiTypography-body2 MuiTypography-colorInherit"
            >
              0-0 of 0
            </p>
            <div
              class="MuiTablePagination-actions"
            >
              <button
                aria-label="Previous page"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-disabled MuiButtonBase-disabled"
                disabled=""
                tabindex="-1"
                title="Previous page"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                    />
                  </svg>
                </span>
              </button>
              <button
                aria-label="Next page"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-disabled MuiButtonBase-disabled"
                disabled=""
                tabindex="-1"
                title="Next page"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiTableContainer-root"
      >
        <table
          aria-label="result table"
          class="MuiTable-root makeStyles-table"
        >
          <thead
            class="MuiTableHead-root"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
                scope="col"
              >
                monster.name
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
                scope="col"
              >
                prize.name
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
                scope="col"
              >
                labor.contributions.Athens
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
                scope="col"
              >
                labor.contributions.Sparta
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          />
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`QueryResults renders 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root makeStyles-resultsPane MuiGrid-container"
  >
    <div
      class="MuiGrid-root makeStyles-result MuiGrid-item"
    >
      <div>
        <div
          class="cm-editor ͼ1 ͼ2 "
        >
          <div
            aria-live="polite"
            style="position: absolute; top: -10000px;"
          />
          <div
            class="cm-scroller"
            tabindex="-1"
          >
            <div
              aria-multiline="true"
              autocapitalize="off"
              autocorrect="off"
              class="cm-content cm-lineWrapping"
              contenteditable="false"
              role="textbox"
              spellcheck="false"
              style="tab-size: 4;"
              translate="no"
            >
              <div
                class="cm-line"
              >
                query: 
              </div>
              <div
                class="cm-line"
              >
                user_columns: [
                <span
                  class="ͼd"
                >
                  "monster.name"
                </span>
                ,
                <span
                  class="ͼd"
                >
                  "monster.name"
                </span>
                ,
                <span
                  class="ͼd"
                >
                  "prize.name"
                </span>
                ]
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root makeStyles-config MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end"
      >
        <div
          class="MuiTypography-root makeStyles-container MuiTypography-body1"
        >
          <label
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              Nest matrices
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <span
                class="MuiSwitch-root WithStyles(ForwardRef(Switch))-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiSwitch-switchBase WithStyles(ForwardRef(Switch))-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-checked MuiSwitch-checked WithStyles(ForwardRef(Switch))-checked"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input MuiSwitch-input"
                      name="expand-matrices-query"
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="MuiSwitch-thumb WithStyles(ForwardRef(Switch))-thumb"
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiSwitch-track WithStyles(ForwardRef(Switch))-track"
                />
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              Expand matrices
            </div>
          </label>
        </div>
        <div
          class="MuiTypography-root makeStyles-container MuiTypography-body1"
        >
          <label
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              Nested
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <span
                class="MuiSwitch-root WithStyles(ForwardRef(Switch))-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiSwitch-switchBase WithStyles(ForwardRef(Switch))-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-checked MuiSwitch-checked WithStyles(ForwardRef(Switch))-checked"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input MuiSwitch-input"
                      name="flatten-query"
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="MuiSwitch-thumb WithStyles(ForwardRef(Switch))-thumb"
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiSwitch-track WithStyles(ForwardRef(Switch))-track"
                />
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              Flattened
            </div>
          </label>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-flex-end MuiGrid-justify-xs-flex-end"
      >
        <div
          class="MuiTablePagination-root"
        >
          <div
            class="MuiToolbar-root MuiToolbar-regular MuiTablePagination-toolbar MuiToolbar-gutters"
          >
            <div
              class="MuiTablePagination-spacer"
            />
            <p
              class="MuiTypography-root MuiTablePagination-caption MuiTypography-body2 MuiTypography-colorInherit"
              id="mui-50000"
            >
              Rows per page:
            </p>
            <div
              class="MuiInputBase-root MuiTablePagination-input MuiTablePagination-selectRoot"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="mui-50000 mui-50000"
                class="MuiSelect-root MuiSelect-select MuiTablePagination-select MuiSelect-selectMenu MuiInputBase-input"
                id="mui-50000"
                role="button"
                tabindex="0"
              >
                10
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                tabindex="-1"
                value="10"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiTablePagination-selectIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
            <p
              class="MuiTypography-root MuiTablePagination-caption MuiTypography-body2 MuiTypography-colorInherit"
            >
              0-0 of 0
            </p>
            <div
              class="MuiTablePagination-actions"
            >
              <button
                aria-label="Previous page"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-disabled MuiButtonBase-disabled"
                disabled=""
                tabindex="-1"
                title="Previous page"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                    />
                  </svg>
                </span>
              </button>
              <button
                aria-label="Next page"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-disabled MuiButtonBase-disabled"
                disabled=""
                tabindex="-1"
                title="Next page"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiTableContainer-root"
      >
        <table
          aria-label="result table"
          class="MuiTable-root makeStyles-table"
        >
          <thead
            class="MuiTableHead-root"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
                scope="col"
              >
                monster.name
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
                scope="col"
              >
                prize.name
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          />
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
